--- a/HRMS/HRMS.WebApplication/Views/Shared/_Layout.cshtml
+++ b/HRMS/HRMS.WebApplication/Views/Shared/_Layout.cshtml
@@ -1,6 +1,32 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+    @* <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" href="~/Images/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="~/Images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="~/Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="~/Images/favicon-16x16.png">
+    <meta name="google" value="notranslate">
+
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#000000">
+    <meta name="image" content="https://images.ctfassets.net/m868ks80jg7q/6ZXslbF4d6JDzjnAPyriyh/8387ea09160c40a98750f94ba77d8d2a/curacao-homepage-header-mobile3.jpg?w=1200&amp;h=630&amp;fm=jpg">
+    <meta property="og:image" content="https://images.ctfassets.net/m868ks80jg7q/6ZXslbF4d6JDzjnAPyriyh/8387ea09160c40a98750f94ba77d8d2a/curacao-homepage-header-mobile3.jpg?w=1200&amp;h=630&amp;fm=jpg">
+    <meta property="og:title" content="OFFICIAL Digital Immigration Card C">
+    <meta property="og:type" content="website">
+    <meta name="twitter:site" content=@("@c")>
+    <meta name="twitter:creator" content=@("@c")>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="description" content="Proof of a completed Digital Immigration card is mandatory to enter the island of C. We look forward to welcome you back soon.">
+    <meta property="og:description" content="Proof of a completed Digital Immigration card is mandatory to enter the island of C. We look forward to welcome you back soon.">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=9" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>title</title> *@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - HRMS.WebApplication</title>
