--- a/HRMS/HRMS.WebApplication/Views/Shared/_Layout.cshtml
+++ b/HRMS/HRMS.WebApplication/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     @* <meta charset="utf-8" />
@@ -30,11 +31,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - HRMS.WebApplication</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/HRMS.WebApplication.styles.css" asp-append-version="true" />
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" nonce="@Html.ScriptNonce()" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" nonce="@Html.ScriptNonce()" />
+    <link rel="stylesheet" href="~/HRMS.WebApplication.styles.css" asp-append-version="true" nonce="@Html.ScriptNonce()" />
+    <script src="~/lib/jquery/dist/jquery.min.js" nonce="@Html.ScriptNonce()"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" nonce="@Html.ScriptNonce()"></script>
+    <link href="https://cdn.datatables.net/2.3.3/css/dataTables.bootstrap5.min.css" rel="stylesheet" nonce="@Html.ScriptNonce()" />
+    <script src="https://cdn.datatables.net/2.3.3/js/dataTables.min.js" nonce="@Html.ScriptNonce()"></script>
+    <script src="https://cdn.datatables.net/2.3.3/js/dataTables.bootstrap5.min.js" nonce="@Html.ScriptNonce()"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" nonce="@Html.ScriptNonce()" />
 </head>
 <body>
     <header>
@@ -84,8 +89,8 @@
 
     </script>
 
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/lib/microsoft-signalr/signalr.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true" nonce="@Html.ScriptNonce()"></script>
+    <script src="~/lib/microsoft-signalr/signalr.min.js" nonce="@Html.ScriptNonce()"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
