--- a/HRMS/HRMS.WebApplication/Views/_ViewImports.cshtml
+++ b/HRMS/HRMS.WebApplication/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using HRMS.WebApplication
 @using HRMS.WebApplication.Models
+@using HRMS.WebApplication.Helpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
